[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/actors/player/weapons/slice.gd" type="Script" id=1]
[ext_resource path="res://assets/bullet/sword.png" type="Texture" id=2]
[ext_resource path="res://assets/particles/stardust.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5, 13 )

[node name="Slice" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 45.5, 0 )
shape = SubResource( 1 )

[node name="PlaceholderSprite" type="TextureRect" parent="."]
margin_top = -13.0
margin_right = 91.0
margin_bottom = 13.0
texture = ExtResource( 2 )
expand = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 35, -6 )
scale = Vector2( 3.51754, 0.623206 )
explosiveness = 0.22
randomness = 0.5
texture = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Slice_area_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
